--- a/package.json
+++ b/package.json
@@ -4,5 +4,14 @@
   },
   "devDependencies": {
     "nodemon": "^3.0.3"
-  }
+  },
+  "name": "nodejs",
+  "description": "<!-- # Nome do projeto",
+  "version": "1.0.0",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "vinipet",
+  "license": "ISC"
 }
